--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,3 @@
-display-message "tmux.conf is loaded 2!"
-run-shell "echo 'tmux.conf is loaded 2!'"
 source-file ~/.config/tmux/tmux.reset.conf
 set-option -g default-terminal 'screen-256color'
 set-option -g terminal-overrides ',xterm-256color:RGB'
@@ -68,5 +66,5 @@ set -g @catppuccin_directory_text "#{b:pane_current_path}"
 set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
 set -g @catppuccin_date_time_text "%H:%M"
 
-set -g status-right "tmux.conf loaded xxx"
+set -g @catppuccin_flavor 'mocha'
 run '~/.tmux/plugins/tpm/tpm'
