--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,44 @@
-source-file ~/.config/tmux/tmux.reset.conf
+# Key bindings
+bind ^X lock-server
+bind ^C new-window -c "$HOME"
+bind ^D detach
+bind * list-clients
+
+bind H previous-window
+bind L next-window
+
+bind r command-prompt "rename-window %%"
+bind ^A last-window
+bind ^W list-windows
+bind w list-windows
+bind z resize-pane -Z
+bind ^L refresh-client
+bind l refresh-client
+bind | split-window
+bind s split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind '"' choose-window
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
+bind -r -T prefix , resize-pane -L 20
+bind -r -T prefix . resize-pane -R 20
+bind -r -T prefix - resize-pane -D 7
+bind -r -T prefix = resize-pane -U 7
+bind : command-prompt
+# bind * setw synchronize-panes
+bind P set pane-border-status
+# bind c kill-pane
+# bind x swap-pane -D
+bind S choose-session
+bind R source-file ~/.config/tmux/tmux.conf
+bind K send-keys "clear"\; send-keys "Enter"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+
+# Key bindings END
+
+
 set-option -g default-terminal 'screen-256color'
 set-option -g terminal-overrides ',xterm-256color:RGB'
 
@@ -38,7 +78,7 @@ set -g @floax-bind 'p'
 set -g @floax-change-path 'true'
 set -g @sessionx-bind-zo-new-window 'ctrl-y'
 set -g @sessionx-auto-accept 'off'
-set -g @sessionx-custom-paths '/Users/omerxx/dotfiles'
+set -g @sessionx-custom-paths '/Users/magnus/dotfiles'
 set -g @sessionx-bind 'o'
 set -g @sessionx-x-path '~/dotfiles'
 set -g @sessionx-window-height '85%'
