tmux: add copycat and fuzzy search, and mouse mode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -29,6 +29,7 @@ bind -r -T prefix = resize-pane -U 7
 bind : command-prompt
 # bind * setw synchronize-panes
 bind P set pane-border-status
+bind x kill-pane
 # bind c kill-pane
 # bind x swap-pane -D
 bind S choose-session
@@ -55,6 +56,11 @@ setw -g mode-keys vi
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
 
+### Added by Magnus
+
+set -g mouse on
+
+###
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
 
@@ -63,7 +69,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'fcsonline/tmux-thumbs'
+set -g @plugin 'roosta/tmux-fuzzback'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'omerxx/catppuccin-tmux' # For some reason, the regular catppucin-tmux didnt work. Using this for now 
