update tmux, karabiner, add wezterm

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,4 @@
-# Key bindings
+
 bind ^X lock-server
 bind ^C new-window -c "$HOME"
 bind ^D detach
@@ -35,8 +35,9 @@ bind x kill-pane
 bind S choose-session
 bind R source-file ~/.config/tmux/tmux.conf
 bind K send-keys "clear"\; send-keys "Enter"
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-
+# bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind -r a select-pane -t .+1 \;  resize-pane -Z
+bind M-s setw synchronize-panes \; display-message "sync: #{?pane_synchronized,on,off}"
 # Key bindings END
 
 
@@ -52,7 +53,7 @@ set -g renumber-windows on       # renumber all windows when any window is close
 set -g set-clipboard on          # use system clipboard
 set -g status-position top       # macOS / darwin style
 set -g default-terminal "${TERM}"
-setw -g mode-keys vi
+# setw -g mode-keys vi
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
 
@@ -70,9 +71,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'fcsonline/tmux-thumbs'
-set -g @plugin 'roosta/tmux-fuzzback'
+# set -g @plugin 'tmux-plugins/tmux-copycat'
+# set -g @plugin 'fcsonline/tmux-thumbs'
+# set -g @plugin 'roosta/tmux-fuzzback'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'omerxx/catppuccin-tmux' # For some reason, the regular catppucin-tmux didnt work. Using this for now 
@@ -133,11 +134,11 @@ if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
 if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
+# bind-key -T copy-mode-vi 'C-h' select-pane -L
+# bind-key -T copy-mode-vi 'C-j' select-pane -D
+# bind-key -T copy-mode-vi 'C-k' select-pane -U
+# bind-key -T copy-mode-vi 'C-l' select-pane -R
+# bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 
 run '~/.tmux/plugins/tpm/tpm'
